# github_user_cli

./: CMakeLists.txt  LICENCE  README.md
include/: activity_parser.h  api_client.h
src/: activity_parser.cpp  api_client.cpp  main.cpp
tests/: test_main.cpp
